fix gap

--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -105,7 +105,6 @@
   align-items: center;
   @include media(desktop) {
     flex-direction: row;
-    gap: 32px;
   }
 }
 
@@ -188,7 +187,7 @@
     transform: rotate(-90deg);
     position: absolute;
     top: 23%;
-    left: 26.5%;
+    left: 27.5%;
   }
 
   .decor-line-secondary::after {
@@ -199,7 +198,7 @@
     transform: rotate(-90deg);
     position: absolute;
     top: 23%;
-    right: 26.5%;
+    right: 27.5%;
   }
 }
 
